# Multi_Layer_Perceptron

./: .gitignore  README.md  pyproject.toml  requirements-examples.txt
.github/: copilot-instructions.md
examples/: mnist_experiment.py
mlp/: __init__.py  activations.py  losses.py  metrics.py  optimizers.py
mlp/core/: __init__.py  layer.py  neuron.py
mlp/models/: __init__.py  mlp.py
tests/: test_mlp.py
