[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-layer-perceptron"
version = "0.1.0"
description = "Simple educational Multi Layer Perceptron framework with NumPy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
]

[tool.setuptools]
packages = ["mlp", "mlp.core", "mlp.models"]
